--- a/admin-portal/src/app/app.component.html
+++ b/admin-portal/src/app/app.component.html
@@ -2,4 +2,4 @@
   {{title}}
 </h1>
 
-<button md-raised-button class="mat-primary">
+<button md-raised-button class="mat-primary">Button Works</button>
