--- a/admin-portal/src/app/components/nav-bar/nav-bar.component.html
+++ b/admin-portal/src/app/components/nav-bar/nav-bar.component.html
@@ -1,3 +1,12 @@
-<p>
-  nav-bar works!
-</p>
+<md-toolbar class="mat-primary">
+  <h3 [style.color]="'white'">Admin Portal</h3>
+  <span class="example-spacer"></span>
+  <span [hidden]="!loggedIn"><a md-button>View Book List</a></span>
+  <span [hidden]="!loggedIn"><a md-button>Add a Book</a></span>
+  <span [hidden]="!loggedIn"><a md-button>BookList</a></span>
+
+
+
+</md-toolbar>
+
+<button md-raised-button class="mat-warn" (click)="toggleDisplay()">ToggleDisplay</button>
