--- a/admin-portal/src/app/components/login/login.component.html
+++ b/admin-portal/src/app/components/login/login.component.html
@@ -1,3 +1,20 @@
-<p>
-  login works!
-</p>
+<div class="container">
+  <div [hidden]="loggedIn">
+    <md-grid-list cols="6" [style.margin-top]="'20px'">
+      <md-grid-title [colspan]="1"></md-grid-title>
+      <md-grid-title [colspan]="4">
+        <form (ngSubmit)="onSubmit()">
+          <md-input-container class="full-width">
+            <input type="text" mdInput [(ngModel)]="credential.username" name="username" id="username" placeholder="Your Username">
+          </md-input-container>
+          <md-input-container class="full-width">
+            <input type="password" mdInput [(ngModel)]="credential.password" name="password" id="password" placeholder="Your Password">
+          </md-input-container>
+          <button md-raised-button type="submit" class="mat-primary">
+            login
+          </button>
+        </form>
+      </md-grid-title>
+    </md-grid-list>
+  </div>
+</div>
