Fix for login Error in bookstore api

--- a/admin-portal/src/app/components/login/login.component.html
+++ b/admin-portal/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
           <md-input-container class="full-width">
             <input type="password" mdInput [(ngModel)]="credential.password" name="password" id='password' placeholder="Your Password">
           </md-input-container>
-          <button md-raised-button type="submit" class="mat-primary">Login</button>
+          <button md-raised-button type="submit" class="mat-primary login-button">Login</button>
         </form>
       </md-grid-tile>
 
